// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton disabled 1`] = `
<DocumentFragment>
  <button
    disabled=""
    style="color: rgb(130, 130, 130); background-color: rgb(224, 224, 224); font-size: 18px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      role="label"
      style="padding: 0px 10px;"
    >
      Disabled
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton primary 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 18px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      role="label"
      style="padding: 0px 10px;"
    >
      Primary
    </div>
  </button>
</DocumentFragment>
`;
